Fixing if statements in header

--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -1,18 +1,18 @@
 <div class="container-sm general-container">
-  {$ if not completed_game %}
   <div class="row">
-    <div class="col text-start">
-      <p style="margin-bottom: 5px;">Round: {{ current_round }}</p>
-      {% if practice_game %}
-        <p style="margin-top: 5px;">Practice Game</p>
-      {% else %}
-        <p style="margin-top: 5px;">Real Game</p>
-      {% endif %}
+    {% if not completed_game %}
+      <div class="col text-start">
+        <p style="margin-bottom: 5px;">Round: {{ current_round }}</p>
+        {% if practice_game %}
+          <p style="margin-top: 5px;">Practice Game</p>
+        {% else %}
+          <p style="margin-top: 5px;">Real Game</p>
+        {% endif %}
+      </div>
+    {% endif %}
+    <div class="col text-end">
+      <p style="margin-bottom: 5px;">{{ player_name }}</p>
+      <p style="margin-bottom: 5px;">Score: {{ player_score }}</p>
     </div>
   </div>
-{% endif %}
-<div class="col text-end">
-  <p style="margin-bottom: 5px;">{{ player_name }}</p>
-  <p style="margin-bottom: 5px;">Score: {{ player_score }}</p>
-</div>
 </div>
