--- a/prijateli_tree/app/templates/new_session.html
+++ b/prijateli_tree/app/templates/new_session.html
@@ -3,7 +3,17 @@
   PrijateliTree - Access Session
 {% endblock title %}
 {% block content %}
-  <div class="container-sm general-container">
-    <h1>Do some session stuff.</h1>
+  <div class="container-sm flex-container">
+    <h1>Welcome.</h1>
+    <h2>Select the name of the student who will sit at this desk.</h2>
+    <div class="col-sm-4">
+      <form method="get" action='{{ url_for("start_session", game_id=game_id) }}'>
+        <!--<label for="num-games" class="col-sm-4 col-form-label"></label>-->
+        <select id="player_id" class="form-select form-select-sm" name="player_id">
+          {% for p in players %}<option value="{{ p.id }}">{{ p.user.name_str }}</option>{% endfor %}
+        </select>
+        <button type="submit" class="btn btn-primary float-end">Start</button>
+      </form>
+    </div>
   </div>
 {% endblock content %}
