--- a/prijateli_tree/app/templates/ready.html
+++ b/prijateli_tree/app/templates/ready.html
@@ -5,16 +5,17 @@
 {% block content %}
   <div class="container-sm general-container">
     <h1>{{ name }}</h1>
-    <h1>Get Ready to Play</h1>
-    <h2 class="text-danger">Red</h2>
+    <h1>{{ text.ready_to_play.get_ready }}</h1>
+    <h2 class="text-danger">{{ text.util.red }}</h2>
+    <!--MISSING TRANSLATION -->
     <h3>or</h3>
-    <h2 class="text-primary">Blue!</h2>
-    <form class="row"
-          method="post"
-          action='{{ url_for("ready") }}'
-          style="display: flex;
-                 justify-content: center">
-      <button class="btn btn-primary" type="submit" value="submit">I'm Ready!</button>
-    </form>
+    <h2 class="text-primary">{{ text.util.blue }}</h2>
+    <div class="w-25 mx-auto">
+      <form class="row"
+            method="get"
+            action='{{ url_for("get_qualtrics", game_id=game_id, player_id=player_id) }}'>
+        <button class="btn btn-primary" type="submit" value="submit">{{ text.ready_to_play.im_ready }}</button>
+      </form>
+    </div>
   </div>
 {% endblock content %}
