--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -4,9 +4,9 @@
       <div class="col text-start">
         <p style="margin-bottom: 5px;">Round: {{ current_round }}</p>
         {% if practice_game %}
-          <p style="margin-top: 5px;">Practice Game</p>
+          <p style="margin-bottom: 5px;">Practice Game</p>
         {% else %}
-          <p style="margin-top: 5px;">Real Game</p>
+          <p style="margin-bottom: 5px;">Real Game</p>
         {% endif %}
       </div>
     {% endif %}
