Adding practice game translation

--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -4,7 +4,7 @@
       <div class="col text-start">
         <p style="margin-bottom: 5px;">{{ text.game_first_round.round }}: {{ current_round }} / {{ total_rounds }}</p>
         {% if practice_game %}
-          <p style="margin-bottom: 5px;">Practice Game</p>
+          <p style="margin-bottom: 5px;">{{ text.game_video.game }}</p>
         {% else %}
           <p style="margin-bottom: 5px;">Real Game</p>
         {% endif %}
