--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col text-end">
       <p style="margin-bottom: 5px;">{{ player_name }}</p>
-      <p style="margin-bottom: 5px;">Score: {{ player_score }}</p>
+      <p style="margin-bottom: 5px;">{{ text.game_video.score }}: {{ player_score }}</p>
     </div>
   </div>
 </div>
