--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -5,9 +5,9 @@
         <p style="margin-bottom: 5px;">{{ text.game_first_round.round }}: {{ current_round }} / {{ total_rounds }}</p>
       {% endif %}
       {% if practice_game %}
-        <p style="margin-bottom: 5px;">{{ text.game_video.game }} {{ practice_game_progress }}</p>
+        <p style="margin-bottom: 5px;">{{ text.game_video.game }}: {{ practice_game_progress }}</p>
       {% else %}
-        <p style="margin-bottom: 5px;">Real Game {{ real_game_progress }}</p>
+        <p style="margin-bottom: 5px;">Real Game: {{ real_game_progress }}</p>
       {% endif %}
     </div>
     <div class="col text-end">
