--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col text-start">
       {% if not completed_game %}
-        <p style="margin-bottom: 5px;">{{ text.game_first_round.round }}: {{ current_round }} / {{ total_rounds }}</p>
+        <p style="margin-bottom: 5px;">{{ text.game_first_round.round }}: {{ round_progress }}</p>
       {% endif %}
       {% if practice_game %}
         <p style="margin-bottom: 5px;">{{ text.game_video.game }}: {{ practice_game_progress }}</p>
