Adds logic to initiate the session (#102)
<!--- Please write your PR name in the present imperative tense.
Examples of that tense are: "Fix issue in the dispatcher where…",
"Improve our handling of…", etc." -->
<!-- For more information on Pull Requests, you can reference here:
https://success.vanillaforums.com/kb/articles/228-using-pull-requests-to-contribute
-->
## Describe Your Changes

- adds template / route "games/session/{session_id}" for admin to set up
students on computers
- adds template / route "game/{game_id}/ready?player_id=" for student to
confirm they are ready
- sends student to survey

## Non-Obvious Technical Information

@FedericoDM / @pepipandi: For #64, we do not have translations for
session/{session_id} route. Let's use put all of them on the page since
we won't know the language of the administrators (and the two
administrators will have distinct mother tongues).

The "security" is pretty loose right now. The admin can have the same
name on multiple screens. Let's monitor this during piloting.

## Checklist Before Requesting a Review
- [x] The code runs successfully.

We can flow through the pages without issue. No changes required to the
database.

```commandline
2023-12-15 00:20:28 INFO:     172.25.0.1:48500 - "POST /admin/session HTTP/1.1" 302 Found
2023-12-15 00:20:28 INFO:     172.25.0.1:48498 - "GET /admin/dashboard?success=Your+session+%28ID%3A+3%29+and+first+game+%28ID%3A+8%29+have+been+created%21 HTTP/1.1" 200 OK
2023-12-15 00:20:47 INFO:     172.25.0.1:58476 - "GET /games/session/3 HTTP/1.1" 200 OK
2023-12-15 00:24:25 INFO:     172.25.0.1:52606 - "GET /games/8/ready?player_id=44 HTTP/1.1" 200 OK
2023-12-15 00:29:02 INFO:     172.25.0.1:50526 - "GET /games/8/player/44/survey HTTP/1.1" 200 OK
```

--- a/prijateli_tree/app/templates/qualtrics.html
+++ b/prijateli_tree/app/templates/qualtrics.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
 {% block helper_script %}
+  <script>
+  window.addEventListener("message", receiveMessage, false);
+
+  function receiveMessage(event) {
+    if(event.data.includes("End of Survey")){
+        console.log("We're getting information across iframe")
+        window.location.href = "/games/{{game_id}}/player/{{player_id}}/round"
+    }
+  }
+  </script>
 {% endblock helper_script %}
 {% block title %}
   PrijateliTree - Survey
