Create snippet with student's information (#93)
<!--- Please write your PR name in the present imperative tense.
Examples of that tense are: "Fix issue in the dispatcher where…",
"Improve our handling of…", etc." -->
<!-- For more information on Pull Requests, you can reference here:
https://success.vanillaforums.com/kb/articles/228-using-pull-requests-to-contribute
-->
## Describe Your Changes

- Adding utility template to display student's name and score.
- Routes in the `games.py` file are updated to include that new
information.
- Templates are updated to include the new snippet.
- Game counter up and running

## Non-Obvious Technical Information

Student's information displayed in 'real_game_transition.html':


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/9faa059b-d589-4ee2-8819-bb0f9f541bcf)

Student's information displayed in 'end_of_game.html'


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/50b219d2-07d4-4dd6-babc-c29536579153)

Student's information displayed in 'round.html'


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/1b49d661-a9a2-4ffa-abd4-bfe4d52b7618)

Student's information displayed in 'waiting' screen


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/2fae054c-6d82-4abf-bb02-1bc26abc01c6)


## Checklist Before Requesting a Review
- [x] The code runs successfully.

---------

Co-authored-by: Ari Anisfeld <ari.anisfeld@gmail.com>

--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -3,13 +3,8 @@
   PrijateliTree - View Round
 {% endblock title %}
 {% block content %}
+  {% include "student_info.html" %}
   <div class="container-sm general-container">
-    {% if practice_game %}
-      <p class="text-end">Practice Game</p>
-    {% else %}
-      <p class="text-end">Real Game</p>
-    {% endif %}
-    <p>Round: {{ current_round }}</p>
     {% if first_round %}
       <h2>
         Your Ball:
