--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -37,6 +37,7 @@
   PrijateliTree - Waiting
 {% endblock title %}
 {% block content %}
+  {% include "student_info.html" %}
   <div class="container-sm general-container">
     <h1>{{ text.waiting_screen.waiting }}</h1>
     <br>
