--- a/prijateli_tree/app/templates/end_of_session.html
+++ b/prijateli_tree/app/templates/end_of_session.html
@@ -13,5 +13,8 @@
     <div class="pb-4">
       <h1>{{ text.final_score.denars | replace('{X}', denars) }}</h1>
     </div>
+    <div class="pt-2">
+      <h4>{{ text.final_score.ask_your_teachers }}</h4>
+    </div>
   </div>
 {% endblock content %}
