clarifying name score_header

--- a/prijateli_tree/app/templates/real_game_transition.html
+++ b/prijateli_tree/app/templates/real_game_transition.html
@@ -3,7 +3,7 @@
   Real Game Transition
 {% endblock title %}
 {% block content %}
-  {% include "student_info.html" %}
+  {% include "score_header.html" %}
   <div class="container-sm general-container">
     <div class="pb-4">
       <h2>{{ text.real_game_intro.now_we_practiced }}</h2>
