--- a/prijateli_tree/app/templates/start_of_game.html
+++ b/prijateli_tree/app/templates/start_of_game.html
@@ -3,7 +3,7 @@
   Start of Game
 {% endblock title %}
 {% block content %}
-  <div class="container-sm general-container">
+  <div class="container-sm general-container col-md-8 offset-md-2">
     <div class="pb-4">
     <h1> 
     {% if practice_game %}
