--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block helper_script %}
   <script>
-    <!--calls wait again after 3 seconds-->
+    <!--calls wait again after 2 seconds-->
     async function check_all_set() {
-      const response = await fetch("/games/{{game_id}}/all_set");
+      const response = await fetch("/games/{{game_id}}/player/{{player_id}}/all_set");
       const all_set = await response.json();
 
       if (all_set.ready && ! all_set.game_over) {
@@ -29,7 +29,9 @@
         console.log("Other players are not ready, restarting the wait cycle.")
       }
     }
-
+    $(document).ready( function () {
+      check_all_set();
+    });
     setInterval(function() { check_all_set();}, 2000);
   </script>
 {% endblock helper_script %}
