--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col text-start">
       {% if not completed_game %}
-        <p style="margin-bottom: 5px;">{{ text.game_first_round.round }}: {{ round_progress }}</p>
+        <p style="margin-bottom: 5px;">{{ text.header.round }}: {{ round_progress }}</p>
       {% endif %}
       {% if practice_game %}
-        <p style="margin-bottom: 5px;">{{ text.game_video.game }}: {{ practice_game_progress }}</p>
+        <p style="margin-bottom: 5px;">{{ text.header.practice }}: {{ practice_game_progress }}</p>
       {% else %}
         <p style="margin-bottom: 5px;">Real Game: {{ real_game_progress }}</p>
       {% endif %}
