Slight edit to Excel

--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -8,7 +8,7 @@
     {% if first_round %}
       {{ text.game.the_computer_chose }}
       <h2>
-        {{ text.game.your_ball }}:
+        {{ text.game.your_ball }}
         {% if ball == 'R' %}
           <span class="text-danger">{{ text.util.red }}</span>
         {% elif ball == 'B' %}
