Template, excel and en json edit

--- a/prijateli_tree/app/templates/end_of_session.html
+++ b/prijateli_tree/app/templates/end_of_session.html
@@ -19,7 +19,7 @@
     <div class="p-5">
       <form method="get"
             action="{{ url_for('thank_you', player_id=player_id, game_id=game_id) }}">
-        <button class="btn btn-primary" type="submit" value="submit">{{ text.rules_screen.next }}</button>
+        <button class="btn btn-primary" type="submit" value="submit">{{ text.util.next }}</button>
       </form>
     </div>
   </div>
