--- a/prijateli_tree/app/templates/student_info.html
+++ b/prijateli_tree/app/templates/student_info.html
@@ -1,9 +1,7 @@
 <div class="container-sm general-container">
   <div class="row">
     <div class="col text-start">
-      {% if not completed_game %}
-        <p style="margin-bottom: 5px;">{{ text.header.round }}: {{ round_progress }}</p>
-      {% endif %}
+      {% if not completed_game %}<p style="margin-bottom: 5px;">{{ text.header.round }}: {{ round_progress }}</p>{% endif %}
       {% if practice_game %}
         <p style="margin-bottom: 5px;">{{ text.header.practice }}: {{ practice_game_progress }}</p>
       {% else %}
