Automate language automation and use new JSONs for templating (#127)
## Describe Your Changes

- Created a python script that automatically creates the JSON from an
Excel file
- New JSONs are used in the required templates

## Non-Obvious Technical Information

- The Excel's file name is _hard coded_ on the `utils/constants.py`
script.

## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
root@LAPTOP-RMMEN33V:/mnt/c/Users/fdmol/Desktop/Prijateli-project/PrijateliTree# make process_translations
python3 ./prijateli_tree/app/utils/process_translations.py
```

Some of the templates look like this:

Start of game:


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/40b859af-ba3a-432b-b126-8b441cf773df)

First round:


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/867acec4-3e8f-42d5-9740-1c5987a7316a)

Second round:


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/481b68f9-4ea5-4005-bf46-c05e569c67e9)

Waiting:


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/14848581-f3c8-46ca-a24a-e46481e26a90)

End of game:


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/6a5083bc-e943-4d50-9728-d2396daaa67c)

End of session:


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/9cf068e2-dbd0-4161-a67b-6b3159ae52b5)

Thank you screen:


![image](https://github.com/prijatelilab/PrijateliTree/assets/67844597/dfa109eb-75ca-4728-9c76-11e5e724de8a)

---------

Co-authored-by: Ari Anisfeld <ari.anisfeld@gmail.com>
Co-authored-by: Federico Dominguez<fd.molina@outlook.com>

--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -6,9 +6,9 @@
   {% include "score_header.html" %}
   <div class="container-sm general-container">
     {% if first_round %}
-      {{ text.game_first_round.the_computer_chose }}
+      {{ text.game.the_computer_chose }}
       <h2>
-        Your Ball:
+        {{ text.game.your_ball }}
         {% if ball == 'R' %}
           <span class="text-danger">{{ text.util.red }}</span>
         {% elif ball == 'B' %}
@@ -18,7 +18,7 @@
         {% endif %}
       </h2>
     {% else %}
-      <h1>Your Previous Guess</h1>
+      <h1>{{ text.game.your_previous_guess }}</h1>
       <h2>
         {% if previous_answers.your_previous_answer == 'R' %}
           <span class="text-danger">{{ text.util.red }}</span>
@@ -28,7 +28,7 @@
           {{ previous_answers.your_previous_answer }}
         {% endif %}
       </h2>
-      <h1>{{ text.game_other_rounds.see_what_others_guessed }}</h1>
+      <h1>{{ text.game.see_what_others_guessed }}</h1>
       <ul style="list-style: none; padding: 0;">
         {% for index in previous_answers.neighbors_previous_answer %}
           {% set neighbor_answer = previous_answers.neighbors_previous_answer[loop.index-1] %}
@@ -45,7 +45,7 @@
         {% endfor %}
       </ul>
     {% endif %}
-    <h1>{{ text.game_first_round.guess_color }}</h1>
+    <h1>{{ text.game.guess_color }}</h1>
     <!-- Button for 'Red' answer -->
     <form action="{{ url_for('route_add_answer', game_id=game_id, player_id=player_id) }}"
           method="post">
