--- a/prijateli_tree/app/templates/create_session.html
+++ b/prijateli_tree/app/templates/create_session.html
@@ -6,7 +6,7 @@
   <script>
   $(document).ready(function() {
      $('#students').DataTable({
-       select: 'multi'
+       "select": 'multi',
     });
 
     $('#students tbody').on( 'click', 'tr', function () {
@@ -18,6 +18,7 @@
       const formData = new FormData();
       const numbers = ["one", "two", "three", "four", "five", "six"]
       const languageCounter = {}
+
       for (i in selectedRows) {
         formData.append("player_" + numbers[i], parseInt(selectedRows[i][0]))
         lang = selectedRows[i][1]
@@ -68,7 +69,7 @@
   <div class="container-sm">
     <div class="row">
       <table id="students"
-             class="display bg-light-subtle table table-hover table-bordered">
+             class="display  bg-light-subtle ">
         <caption>List of Students</caption>
         <thead>
           <tr>
@@ -100,81 +101,82 @@
         </tbody>
       </table>
     </div>
-    <button id="button">Save Selection</button>
-    <!-- HERE WE ARE <div class="container-sm">-->
-    <div class="row">
-      <div class="form-container bg-light-subtle col-xs-12 offset-md-1 col-md-10 offset-lg-1 col col-lg-10 offset-xl-3 col col-xl-6">
-        <form method="post" action='{{ url_for("create_session") }}'>
-          <div class="mb-3 row">
-            <label for="num-games" class="col-sm-4 col-form-label">Number of Games</label>
-            <div class="col-sm-8">
-              <input type="number"
-                     min="1"
-                     step="1"
-                     max="50"
-                     class="form-control form-control-sm"
-                     value="1"
-                     id="num-games"
-                     name="num_games">
-            </div>
+  
+  <button id="button" class="btn btn-primary float-start">Save Selection</button>
+  <!--START OF FORM-->
+  <div class="row">
+    <div class="form-container bg-light-subtle col-xs-12 offset-md-1 col-md-10 offset-lg-1 col col-lg-10 offset-xl-3 col col-xl-6">
+      <form method="post" action='{{ url_for("create_session") }}'>
+        <div class="mb-3 row">
+          <label for="num-games" class="col-sm-4 col-form-label">Number of Games</label>
+          <div class="col-sm-8">
+            <input type="number"
+                   min="1"
+                   step="1"
+                   max="50"
+                   class="form-control form-control-sm"
+                   value="1"
+                   id="num-games"
+                   name="num_games">
           </div>
-          <div class="mb-3 row">
-            <label for="pos-one" class="col-sm-4 form-label">Player One</label>
-            <div class="col-sm-8">
-              <select id="pos-one" class="form-select form-select-sm" name="player_one">
-                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-              </select>
-            </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="pos-one" class="col-sm-4 form-label">Player One</label>
+          <div class="col-sm-8">
+            <select id="pos-one" class="form-select form-select-sm" name="player_one">
+              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+            </select>
           </div>
-          <div class="mb-3 row">
-            <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
-            <div class="col-sm-8">
-              <select id="pos-two" class="form-select form-select-sm" name="player_two">
-                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-              </select>
-            </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
+          <div class="col-sm-8">
+            <select id="pos-two" class="form-select form-select-sm" name="player_two">
+              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+            </select>
           </div>
-          <div class="mb-3 row">
-            <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
-            <div class="col-sm-8">
-              <select id="pos-three" class="form-select form-select-sm" name="player_three">
-                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-              </select>
-            </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
+          <div class="col-sm-8">
+            <select id="pos-three" class="form-select form-select-sm" name="player_three">
+              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+            </select>
           </div>
-          <div class="mb-3 row">
-            <label for="pos-four" class="col-sm-4 form-label">Player Four</label>
-            <div class="col-sm-8">
-              <select id="pos-four" class="form-select form-select-sm" name="player_four">
-                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-              </select>
-            </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="pos-four" class="col-sm-4 form-label">Player Four</label>
+          <div class="col-sm-8">
+            <select id="pos-four" class="form-select form-select-sm" name="player_four">
+              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+            </select>
           </div>
-          <div class="mb-3 row">
-            <label for="pos-five" class="col-sm-4 form-label">Player Five</label>
-            <div class="col-sm-8">
-              <select id="pos-five"
-                      class="col-sm-4 form-select form-select-sm"
-                      name="player_five">
-                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-              </select>
-            </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="pos-five" class="col-sm-4 form-label">Player Five</label>
+          <div class="col-sm-8">
+            <select id="pos-five"
+                    class="col-sm-4 form-select form-select-sm"
+                    name="player_five">
+              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+            </select>
           </div>
-          <div class="mb-3 row">
-            <label for="pos-six" class="col-sm-4 form-label">Player Six</label>
-            <div class="col-sm-8">
-              <select id="pos-six"
-                      class="col-sm-4 form-select form-select-sm"
-                      name="player_six">
-                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-              </select>
-            </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="pos-six" class="col-sm-4 form-label">Player Six</label>
+          <div class="col-sm-8">
+            <select id="pos-six"
+                    class="col-sm-4 form-select form-select-sm"
+                    name="player_six">
+              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+            </select>
           </div>
-          <button type="submit" class="btn btn-primary float-end">Create</button>
-        </form>
-      </div>
+        </div>
+        <button type="submit" class="btn btn-primary float-end">Create</button>
+      </form>
     </div>
   </div>
+</div>
 {% endblock content %}
 <form class="d-flex" action='{{ url_for("logout") }}'>
   <button class="float-end btn btn-primary" type="submit">Logout</button>
