--- a/prijateli_tree/app/templates/create_session.html
+++ b/prijateli_tree/app/templates/create_session.html
@@ -68,8 +68,7 @@
   <!-- DataTable columns and headers go here -->
   <div class="container-sm">
     <div class="row">
-      <table id="students"
-             class="display  bg-light-subtle ">
+      <table id="students" class="display  bg-light-subtle ">
         <caption>List of Students</caption>
         <thead>
           <tr>
@@ -101,82 +100,81 @@
         </tbody>
       </table>
     </div>
-  
-  <button id="button" class="btn btn-primary float-start">Save Selection</button>
-  <!--START OF FORM-->
-  <div class="row">
-    <div class="form-container bg-light-subtle col-xs-12 offset-md-1 col-md-10 offset-lg-1 col col-lg-10 offset-xl-3 col col-xl-6">
-      <form method="post" action='{{ url_for("create_session") }}'>
-        <div class="mb-3 row">
-          <label for="num-games" class="col-sm-4 col-form-label">Number of Games</label>
-          <div class="col-sm-8">
-            <input type="number"
-                   min="1"
-                   step="1"
-                   max="50"
-                   class="form-control form-control-sm"
-                   value="1"
-                   id="num-games"
-                   name="num_games">
+    <button id="button" class="btn btn-primary float-start">Save Selection</button>
+    <!--START OF FORM-->
+    <div class="row">
+      <div class="form-container bg-light-subtle col-xs-12 offset-md-1 col-md-10 offset-lg-1 col col-lg-10 offset-xl-3 col col-xl-6">
+        <form method="post" action='{{ url_for("create_session") }}'>
+          <div class="mb-3 row">
+            <label for="num-games" class="col-sm-4 col-form-label">Number of Games</label>
+            <div class="col-sm-8">
+              <input type="number"
+                     min="1"
+                     step="1"
+                     max="50"
+                     class="form-control form-control-sm"
+                     value="1"
+                     id="num-games"
+                     name="num_games">
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="pos-one" class="col-sm-4 form-label">Player One</label>
-          <div class="col-sm-8">
-            <select id="pos-one" class="form-select form-select-sm" name="player_one">
-              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-            </select>
+          <div class="mb-3 row">
+            <label for="pos-one" class="col-sm-4 form-label">Player One</label>
+            <div class="col-sm-8">
+              <select id="pos-one" class="form-select form-select-sm" name="player_one">
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
-          <div class="col-sm-8">
-            <select id="pos-two" class="form-select form-select-sm" name="player_two">
-              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-            </select>
+          <div class="mb-3 row">
+            <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
+            <div class="col-sm-8">
+              <select id="pos-two" class="form-select form-select-sm" name="player_two">
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
-          <div class="col-sm-8">
-            <select id="pos-three" class="form-select form-select-sm" name="player_three">
-              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-            </select>
+          <div class="mb-3 row">
+            <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
+            <div class="col-sm-8">
+              <select id="pos-three" class="form-select form-select-sm" name="player_three">
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="pos-four" class="col-sm-4 form-label">Player Four</label>
-          <div class="col-sm-8">
-            <select id="pos-four" class="form-select form-select-sm" name="player_four">
-              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-            </select>
+          <div class="mb-3 row">
+            <label for="pos-four" class="col-sm-4 form-label">Player Four</label>
+            <div class="col-sm-8">
+              <select id="pos-four" class="form-select form-select-sm" name="player_four">
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="pos-five" class="col-sm-4 form-label">Player Five</label>
-          <div class="col-sm-8">
-            <select id="pos-five"
-                    class="col-sm-4 form-select form-select-sm"
-                    name="player_five">
-              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-            </select>
+          <div class="mb-3 row">
+            <label for="pos-five" class="col-sm-4 form-label">Player Five</label>
+            <div class="col-sm-8">
+              <select id="pos-five"
+                      class="col-sm-4 form-select form-select-sm"
+                      name="player_five">
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="pos-six" class="col-sm-4 form-label">Player Six</label>
-          <div class="col-sm-8">
-            <select id="pos-six"
-                    class="col-sm-4 form-select form-select-sm"
-                    name="player_six">
-              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-            </select>
+          <div class="mb-3 row">
+            <label for="pos-six" class="col-sm-4 form-label">Player Six</label>
+            <div class="col-sm-8">
+              <select id="pos-six"
+                      class="col-sm-4 form-select form-select-sm"
+                      name="player_six">
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+              </select>
+            </div>
           </div>
-        </div>
-        <button type="submit" class="btn btn-primary float-end">Create</button>
-      </form>
+          <button type="submit" class="btn btn-primary float-end">Create</button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 {% endblock content %}
 <form class="d-flex" action='{{ url_for("logout") }}'>
   <button class="float-end btn btn-primary" type="submit">Logout</button>
