Adds DataTable for Name Selection (#140)
<!--- Please write your PR name in the present imperative tense.
Examples of that tense are: "Fix issue in the dispatcher where…",
"Improve our handling of…", etc." -->
<!-- For more information on Pull Requests, you can reference here:
https://success.vanillaforums.com/kb/articles/228-using-pull-requests-to-contribute
-->
## Describe Your Changes

Now we have a DataTable that allows the administrator

    to filter using the search bar
    to select participants by clicking on the names of players
to get client-side feedback on whether the selection works (6 players, 3
from a given language group)

I left the old form in the HTML for now -- this makes it easier to
control the number of games that will be played and may come in handy in
future iterations or be deleted.

## Non-Obvious Technical Information


## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
24-01-10 13:47:38 INFO:     172.18.0.1:58348 - "GET /admin/session HTTP/1.1" 200 OK
2024-01-10 13:47:46 INFO:     172.18.0.1:58338 - "POST /admin/session HTTP/1.1" 302 Found
2024-01-10 13:47:46 INFO:     172.18.0.1:58338 - "GET /admin/dashboard?success=Your+session+%28ID%3A+8%29+and+first+game+%28ID%3A+82%29+have+been+created%21 HTTP/1.1" 200 OK
```
![Screenshot 2024-01-10 at 11 44
13 AM](https://github.com/prijatelilab/PrijateliTree/assets/25271399/63422061-a03e-4196-82dc-704d4a5a4e8d)

--- a/prijateli_tree/app/templates/create_session.html
+++ b/prijateli_tree/app/templates/create_session.html
@@ -4,6 +4,50 @@
 {% endblock title %}
 {% block helper_script %}
   <script>
+  $(document).ready(function() {
+     $('#students').DataTable({
+       "select": 'multi',
+    });
+
+    $('#students tbody').on( 'click', 'tr', function () {
+        $(this).toggleClass('selected');
+    } );
+
+    $('#button').click( function () {
+      const selectedRows = $('#students').DataTable().rows('.selected').data().toArray();
+      const formData = new FormData();
+      const numbers = ["one", "two", "three", "four", "five", "six"]
+      const languageCounter = {}
+
+      for (i in selectedRows) {
+        formData.append("player_" + numbers[i], parseInt(selectedRows[i][0]))
+        lang = selectedRows[i][1]
+        languageCounter[lang] = languageCounter[lang] ? languageCounter[lang]  + 1 : 1;
+      }
+      const languageCounts = Object.values(languageCounter)
+      if (selectedRows.length != 6) {
+        alert("Must select 6 students")
+        return
+      } else if (languageCounts[0] != 3 || languageCounts[1] != 3) {
+        alert("A session must contain exactly 3 players from distinct mother tongues")
+        return
+      }
+
+      console.log(formData)
+
+      fetch('{{ url_for("create_session") }}', {
+          method: 'POST',
+          body: formData
+        })
+      .then(resp => {
+        window.location.href = resp.url
+      }) // or, resp.text(), etc
+      .catch(error => {
+          console.error(error);
+      });
+    });
+  });
+
   function cleanParams() {
       // Used to clear the URL of parameters after the banner alert is closed.
       window.history.replaceState(null, '', window.location.pathname);
@@ -21,7 +65,43 @@
               onclick="cleanParams()"></button>
     </div>
   {% endif %}
+  <!-- DataTable columns and headers go here -->
   <div class="container-sm">
+    <div class="row">
+      <table id="students" class="display  bg-light-subtle ">
+        <caption>List of Students</caption>
+        <thead>
+          <tr>
+            <th scope="col" hidden>ID</th>
+            <th scope="col" hidden>Language</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Grade</th>
+            <th scope="col">High School</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          {% if students|length == 0 %}
+            <tr class="empty-table">
+              <td colspan="7">There are no students currently in the system.</td>
+            </tr>
+          {% endif %}
+          {% for s in students|sort(attribute='high_school.name, last_name') %}
+            <tr>
+              <!-- hidden columns referenced in js-->
+              <td hidden>{{ s.id }}</td>
+              <td hidden>{{ s.language.abbr }}</td>
+              <td>{{ s.name_str }}</td>
+              <td>{{ s.email }}</td>
+              <td>{{ s.grade_level }}</td>
+              <td>{{ s.high_school.name }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+    <button id="button" class="btn btn-primary float-start">Save Selection</button>
+    <!--START OF FORM-->
     <div class="row">
       <div class="form-container bg-light-subtle col-xs-12 offset-md-1 col-md-10 offset-lg-1 col col-lg-10 offset-xl-3 col col-xl-6">
         <form method="post" action='{{ url_for("create_session") }}'>
