--- a/prijateli_tree/app/templates/choose_neighbors.html
+++ b/prijateli_tree/app/templates/choose_neighbors.html
@@ -3,19 +3,33 @@
     PrijateliTree - Choose Neighbors
 {% endblock title %}
 {% block content %}
-<p>Select the players.</p>
+<p>{{ text.different_game_choices.choose_players | replace('{X}', num_choices) }}.</p>
 <div class="col-sm-4">
   <form>
-    <input type="text" id="game_id" value={{ game_id }} hidden>
-    <select id="player_id" class="form-select form-select-sm" name="player_id">
-      {% for p in players %}<option value="{{ p.id }}">{{ p.user.name_str }}</option>{% endfor %}
-    </select>
-    <br>
-    <br>
-    <!--<button type="submit" class="btn btn-primary float-start">Start</button>-->
-    <button type="button"
-            onclick="redirectToSession()"
-            class="btn btn-primary float-start">Start</button>
+    <div class="mb-3 row">
+        <label for="pos-one" class="col-sm-4 form-label">Player One</label>
+        <div class="col-sm-8">
+          <select id="pos-one" class="form-select form-select-sm" name="player_one">
+            {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+          </select>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
+        <div class="col-sm-8">
+          <select id="pos-two" class="form-select form-select-sm" name="player_two">
+            {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+          </select>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
+        <div class="col-sm-8">
+          <select id="pos-three" class="form-select form-select-sm" name="player_three">
+            {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+          </select>
+        </div>
+      </div>
   </form>
 </div>
 {% endblock content %}
