--- a/prijateli_tree/app/templates/choose_neighbors.html
+++ b/prijateli_tree/app/templates/choose_neighbors.html
@@ -3,35 +3,39 @@
   PrijateliTree - Choose Neighbors
 {% endblock title %}
 {% block content %}
-  <p>{{ text.different_game_choices.choose_players | replace('{X}', num_neighbors) }}.</p>
-  <div class="col-sm-4">
-    <form>
-      <div class="mb-3 row">
-        <label for="pos-one" class="col-sm-4 form-label">Player One</label>
-        <div class="col-sm-8">
-          <select id="pos-one" class="form-select form-select-sm" name="player_one">
-            {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-          </select>
-        </div>
-      </div>
-      <div class="mb-3 row">
-        <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
-        <div class="col-sm-8">
-          <select id="pos-two" class="form-select form-select-sm" name="player_two">
-            {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
-          </select>
-        </div>
-      </div>
-      {% if num_neighbors > 2 %}
+<div class="container-sm general-container">
+  <h3>{{ text.different_game_choices.please_choose_players | replace('{X}', num_neighbors) }}</h3>
+  <div class="row justify-content-center"> <!-- Added row and justify-content-center classes -->
+    <div class="col-sm-4"> <!-- You may adjust col-sm-4 to a different size if needed -->
+      <form>
         <div class="mb-3 row">
-          <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
+          <label for="pos-one" class="col-sm-4 form-label">Player One</label>
           <div class="col-sm-8">
-            <select id="pos-three" class="form-select form-select-sm" name="player_three">
+            <select id="pos-one" class="form-select form-select-sm" name="player_one">
               {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
             </select>
           </div>
         </div>
-      {% endif %}
-    </form>
+        <div class="mb-3 row">
+          <label for="pos-two" class="col-sm-4 form-label">Player Two</label>
+          <div class="col-sm-8">
+            <select id="pos-two" class="form-select form-select-sm" name="player_two">
+              {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+            </select>
+          </div>
+        </div>
+        {% if num_neighbors > 2 %}
+          <div class="mb-3 row">
+            <label for="pos-three" class="col-sm-4 form-label">Player Three</label>
+            <div class="col-sm-8">
+              <select id="pos-three" class="form-select form-select-sm" name="player_three">
+                {% for s in students|sort(attribute='last_name') %}<option value="{{ s.id }}">{{ s.name_str }}</option>{% endfor %}
+              </select>
+            </div>
+          </div>
+        {% endif %}
+      </form>
+    </div>
   </div>
+</div>
 {% endblock content %}
