--- a/prijateli_tree/app/templates/choose_neighbors.html
+++ b/prijateli_tree/app/templates/choose_neighbors.html
@@ -4,7 +4,7 @@
 {% endblock title %}
 {% block content %}
 <div class="container-sm general-container">
-  <h3>{{ text.different_game_choices.please_choose_players | replace('{X}', num_neighbors) }}</h3>
+  <h3 style="margin-bottom: 20px;">{{ text.different_game_choices.please_choose_players | replace('{X}', num_neighbors) }}</h3>
   <div class="row justify-content-center"> <!-- Added row and justify-content-center classes -->
     <div class="col-sm-4"> <!-- You may adjust col-sm-4 to a different size if needed -->
       <form>
