Temporary place-holder for route

--- a/prijateli_tree/app/templates/choose_neighbors.html
+++ b/prijateli_tree/app/templates/choose_neighbors.html
@@ -37,6 +37,7 @@
               </div>
             </div>
           {% endif %}
+          <button type="submit" class="btn btn-primary float-end">{{ text.ready_to_play.im_ready }}</button>
         </form>
       </div>
     </div>
