--- a/prijateli_tree/app/templates/choose_neighbors.html
+++ b/prijateli_tree/app/templates/choose_neighbors.html
@@ -2,6 +2,20 @@
 {% block title %}
   PrijateliTree - Choose Neighbors
 {% endblock title %}
+{% block helper_script %}
+  <script>
+fetch('{{ url_for("add_neighbors") }}', {
+    method: 'POST',
+    body: formData
+  })
+.then(resp => {
+  window.location.href = resp.url
+}) // or, resp.text(), etc
+.catch(error => {
+    console.error(error);
+});
+  </script>
+{% endblock helper_script %}
 {% block content %}
   <div class="container-sm general-container">
     <h3 style="margin-bottom: 40px;">
@@ -10,7 +24,8 @@
     <div class="row justify-content-center">
       <!-- Added row and justify-content-center classes -->
       <div class="col-sm-4">
-        <form  method="post" action='{{ url_for("add_neighbors", game_id=game_id, player_id=player_id)}}'>
+        <form method="post"
+              action='{{ url_for("add_neighbors", game_id=game_id, player_id=player_id) }}'>
           <div class="mb-3 row">
             <label for="pos-one" class="col-sm-4 form-label">{{ text.util.player }} 1</label>
             <div class="col-sm-8">
