--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -91,3 +91,11 @@ tr.empty-table {
       transform: rotate(360deg);
     }
   }
+
+
+  .tooltip {
+    position: absolute;
+    pointer-events: none;
+    color: #fff;
+
+  }
