--- a/prijateli_tree/app/templates/start_of_game.html
+++ b/prijateli_tree/app/templates/start_of_game.html
@@ -6,7 +6,7 @@
   <div class="container-sm general-container col-md-8 offset-md-2">
     <div class="pb-4">
       <h1>
-        {% if practice_game %}
+        {% if game.practice %}
           {{ text.intro_practice.now_you_will_play }}
         {% else %}
           {{ text.ready_to_play.get_ready }}
@@ -14,12 +14,15 @@
       </h1>
     </div>
     <h3>
-      {% if practice_game %}
+      {% if game.practice %}
         {{ text.intro_practice.since_these_rules }}
       {% else %}
-        {{ text.real_game_intro.added_points | replace('{X}', points) }}
+        {{ text.real_game_intro.added_points | replace('{X}', game.winning_score) }}
       {% endif %}
     </h3>
+    {% if true %}
+      {% include "networks.html" %}
+    {% endif %}
     <div class="p-5">
       <form method="get"
             action="{{ url_for('view_round', player_id=player_id, game_id=game_id) }}">
