--- a/prijateli_tree/app/templates/self_selected_intro.html
+++ b/prijateli_tree/app/templates/self_selected_intro.html
@@ -6,7 +6,7 @@
   {% include "score_header.html" %}
   <div class="container-sm general-container">
     <div class="pb-4">
-      <h2>{{ text.different_game_intro.different_version }}</h2>
+      <h2 style="margin-bottom: 40px;">{{ text.different_game_intro.different_version }}</h2>
       <h3>{{ text.different_game_intro.instead_of }}</h3>
     </div>
     <div class="p-5">
