--- a/prijateli_tree/app/templates/choose_neighbors.html
+++ b/prijateli_tree/app/templates/choose_neighbors.html
@@ -2,7 +2,35 @@
 {% block title %}
   PrijateliTree - Choose Neighbors
 {% endblock title %}
+{$ block helper_script %}
+<script>
+    fetch('{{ url_for("create_session") }}', {
+          method: 'POST',
+          body: formData
+        })
+      .then(resp => {
+        window.location.href = resp.url
+      }) // or, resp.text(), etc
+      .catch(error => {
+          console.error(error);
+      });
+    function cleanParams() {
+      // Used to clear the URL of parameters after the banner alert is closed.
+      window.history.replaceState(null, '', window.location.pathname);
+    }
+</script>
+{% endblock helper_script %}
 {% block content %}
+  {% if error %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <strong>ERROR:</strong> {{ error }}
+      <button type="button"
+              class="btn-close"
+              data-bs-dismiss="alert"
+              aria-label="Close"
+              onclick="cleanParams()"></button>
+    </div>
+  {% endif %}
   <div class="container-sm general-container">
     <h3 style="margin-bottom: 40px;">
       {{ text.different_game_choices.please_choose_players | replace('{X}', num_neighbors) }}
