--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -33,9 +33,9 @@
         console.log("Other players are not ready, restarting the wait cycle.")
       }
     }
-    $(document).ready( function () {
-      check_all_set();
-    });
+    // $(document).ready( function () {
+    //   check_all_set();
+    // });
     setInterval(function() { check_all_set();}, 2000);
   </script>
 {% endblock helper_script %}
