--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -13,6 +13,12 @@ div.table-container {
     padding: 20px 30px 10px 20px;
 }
 
+#session_button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+
 div.table-container a.btn {
     float: right;
 }
